# jenga-c--ros

Pose_Estimation/: ABE.ini  CMakeLists.txt  FPFH.h  ICP.h  PoseEstimation_Log.txt  PoseEstimation_Log_FPFH.txt  SHOT.h  SpinImages.h  USC.h  common.h  filter.h  main.cpp  settings.txt  settings_ball.txt
Pose_Estimation/pointclouds/: 11k_abe_11x.pcd  7k_abe_11x.pcd  ABE.0025.pcd  ABE.ini  ABE.pcd  ABEdown.pcd  BALL.ini  BALL.pcd  BALLsclaed.ply  BLOCK.ini  BLOCK.pcd  BLOCK50K.ply  abe_15106.pcd  abe_17268.pcd  alex.pcd  alex2.7kScaled.pcd  jenga1K.pcd
Pose_Estimation/pointclouds/Filtered_PointClouds/: block_middle_flat_model_pose_RESULT.pcd  fig_ball_occ_middle_0.005000_Filtered.pcd  fig_ball_occ_middle_pose_RESULT_1495484735.pcd  fig_block_occ_middle_0.005000_Filtered.pcd  fig_block_occ_middle_0.010000_Filtered.pcd  fig_block_occ_middle_model_pose_RESULT.pcd  fig_block_occ_middle_pose_RESULT_1495287132.pcd  fig_block_occ_middle_pose_RESULT_1495294710.pcd  fig_block_occ_middle_pose_RESULT_1495294940.pcd  fig_block_occ_middle_pose_RESULT_1495295075.pcd  fig_far_side_pose_RESULT_1495484747.pcd  fig_middle_front_pose_RESULT_1495286423.pcd  fig_near_side_0.008500_Filtered.pcd  fig_near_side_pose_RESULT_1495481558.pcd  fig_near_side_pose_RESULT_1495483956.pcd
Pose_Estimation/pointclouds/SHOT results/: PoseEstimation_Log_SHOT.txt  block_far_corner_pose_RESULT_1495391282.pcd  block_middle_corner_pose_RESULT_1495391252.pcd  block_middle_flat_0.005000_Filtered.pcd  block_middle_flat_pose_RESULT_1495391323.pcd  (+20 more)
RobProject/: .pathPlanning.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  original.txt  output.txt  pathPlanning  pathPlanning.cpp  pruned.txt  robwork-release-0.7.0.cfg.xml  standAlonePlan.cpp  weight_calc.py
(+67 files in other folders)
