cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(Pose_Estimation)
find_package(PCL 1.3 REQUIRED COMPONENTS common io visualization features)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(Pose_Estimation main.cpp)
target_link_libraries(Pose_Estimation ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} ${PCL_VISUALIZATION_LIBRARIES} ${PCL_FEATURES_LIBRARIES})
